[package]
name = "esp32-pid"
version = "0.1.0"
authors = ["Moritz Bitsch"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
embedded-hal = "0.2.7"
esp-idf-hal = "0.38.1"
esp-idf-sys = { version = "0.31.6", features = ["binstart"] }
pid = "3.0.0"
tsic = "0.2.1"


[build-dependencies]
embuild = "0.29"
anyhow = "1"
